# naturadex

./: .gitignore  README.md
backend/: .env.example  Cargo.toml
backend/migrations/: 001_init.sql
backend/src/: main.rs
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  api.ts  index.css  types.ts
